# leptos-struct-table-bug

./: Cargo.toml  README.md
src/: main.rs
