[package]
name = "leptos-struct-table-bug"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
console_error_panic_hook = "0.1.7"
leptos = { version = "0.6.5", features = ["csr", "nightly"] }
leptos-struct-table = "0.7.0"
